@@ -104,4 +104,12 @@
               name="shop_item_adapter" />
     </configure>
 
+    <configure zcml:condition="installed simplelayout.base">
+        <adapter
+            for="simplelayout.base.interfaces.ISimpleLayoutBlock"
+            provides="ftw.publisher.core.interfaces.IDataCollector"
+            factory=".simplelayout_blocks.SimplelayoutBlockDataCollector"
+            name="simplelayout_block" />
+    </configure>
+
 </configure>
